--- a/app/globals.css
+++ b/app/globals.css
@@ -204,6 +204,38 @@
 
 /* 🏆 Clases VIP Premium */
 
+.bg-mexican {
+  background: linear-gradient(
+    180deg,
+    #e91e63 0%,
+    #f44336 14%,
+    #ff9800 28%,
+    #ffeb3b 42%,
+    #4caf50 56%,
+    #2196f3 70%,
+    #3f51b5 84%,
+    #9c27b0 100%
+  );
+}
+
+
+.border-mexican {
+  border: 10px solid; /* ancho del borde */
+  border-image: linear-gradient(
+    90deg,
+    #e91e63, /* rosa fuerte */
+    #f44336, /* rojo */
+    #ff9800, /* naranja */
+    #ffeb3b, /* amarillo */
+    #4caf50, /* verde */
+    #2196f3, /* azul */
+    #3f51b5, /* azul oscuro */
+    #9c27b0  /* morado */
+  ) 1;
+  border-radius: 12px; /* opcional, esquinas redondeadas */
+}
+
+
 /* 🌟 VIP Background gradient con transición suave */
 .vip-gradient-background {
   background: linear-gradient(
